hard to read paragraph on smaller device, bg image too bright trying to solve

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body, html {
   left: -50%; 
   width: 200%; 
   height: 200%;
-  opacity: 20%;
+  opacity: 10%;
 }
 
 #bg img {
